# tauri-v2-wgpu

./: README.md  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
