[package]
name = "beta-desktop"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["macos-private-api"] }
serde_json = "1.0"
pretty_env_logger = "0"
wgpu = "0.19"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[patch.crates-io]
#tauri = {path = "A:/tauri-apps/tauri-v2/core/tauri"}
tauri = {git="https://github.com/tauri-apps/tauri", branch="feat/window-displayhandle"}
